--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,6 @@ before_install:
 
 
 before_script:
-  - mkdir build-$QT && cd build-$QT && cmake .. -DTW_BUILD_ID='travis-ci' -DCMAKE_INSTALL_PREFIX='/usr' -DDESIRED_QT_VERSION="$QT"
+  - mkdir build-qt$QT && cd build-qt$QT && cmake .. -DTW_BUILD_ID='travis-ci' -DCMAKE_INSTALL_PREFIX='/usr' -DDESIRED_QT_VERSION="$QT"
 script:
-  - cd build-$QT && make VERBOSE=1
+  - make VERBOSE=1
