--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,9 @@ before_install:
 
 before_script:
   - if [ $TRAVIS_OS_NAME == linux ]; then mkdir build-$TRAVIS_OS_NAME-qt$QT && cd build-$TRAVIS_OS_NAME-qt$QT && cmake .. -DTW_BUILD_ID='travis-ci' -DCMAKE_INSTALL_PREFIX='/usr' -DDESIRED_QT_VERSION="$QT"; fi
-  - if [ $TRAVIS_OS_NAME == osx ]; then mkdir build-$TRAVIS_OS_NAME-qt$QT && cd build-$TRAVIS_OS_NAME-qt$QT && cmake .. -DTW_BUILD_ID='travis-ci' -DDESIRED_QT_VERSION="$QT" -DCMAKE_OSX_DEPLOYMENT_TARGET='10.6' -DCMAKE_OSX_SYSROOT=macosx; fi
+  - if [ $TRAVIS_OS_NAME == osx -a $QT -eq 4 ]; then mkdir build-$TRAVIS_OS_NAME-qt$QT && cd build-$TRAVIS_OS_NAME-qt$QT && cmake .. -DTW_BUILD_ID='travis-ci' -DDESIRED_QT_VERSION="$QT" -DCMAKE_OSX_DEPLOYMENT_TARGET='10.6' -DCMAKE_OSX_SYSROOT=macosx; fi
+  - if [ $TRAVIS_OS_NAME == osx -a $QT -eq 5 ]; then mkdir build-$TRAVIS_OS_NAME-qt$QT && cd build-$TRAVIS_OS_NAME-qt$QT && cmake .. -DTW_BUILD_ID='travis-ci' -DDESIRED_QT_VERSION="$QT" -DCMAKE_OSX_DEPLOYMENT_TARGET='10.6' -DCMAKE_OSX_SYSROOT=macosx -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"; fi
+
 script:
   - make VERBOSE=1
 
