Build qt4 and qt5 on linux and osx again

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,18 +19,18 @@ language: cpp
 #    - liblua5.2-dev
 
 os:
-#  - linux
+  - linux
   - osx
 
-#dist: trusty
-#sudo: required
+dist: trusty
+sudo: required
 
 branches:
   only:
     - master
 
 env:
-#  - QT=4
+  - QT=4
   - QT=5
 
 before_install:
