Be more verbose while packaging on OS X

--- a/CMake/packaging/mac/MacPackagingTasks.cmake.in
+++ b/CMake/packaging/mac/MacPackagingTasks.cmake.in
@@ -37,6 +37,8 @@ IF ( ${CMAKE_INSTALL_PREFIX} MATCHES .*/_CPack_Packages/.* )
       EXPECTED_MD5 "${POPPLER_DATA_ARCHIVE_MD5}"
       SHOW_PROGRESS
     )
+  ELSE ( )
+    MESSAGE(STATUS "Using Poppler data files in '${PROJECT_SOURCE_DIR}/${POPPLER_DATA_ARCHIVE}'")
   ENDIF ()
 
   IF ( NOT EXISTS "${PROJECT_SOURCE_DIR}/${POPPLER_DATA_BASE}" )
@@ -44,8 +46,11 @@ IF ( ${CMAKE_INSTALL_PREFIX} MATCHES .*/_CPack_Packages/.* )
       COMMAND tar xzf "${PROJECT_SOURCE_DIR}/${POPPLER_DATA_ARCHIVE}"
       WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}"
     )
+  ELSE ( )
+    MESSAGE(STATUS "'${PROJECT_SOURCE_DIR}/${POPPLER_DATA_BASE}' already present")
   ENDIF ()
 
+  MESSAGE(STATUS "Bundling poppler data files")
   FILE(INSTALL "${PROJECT_SOURCE_DIR}/${POPPLER_DATA_BASE}/"
     DESTINATION "${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}.app/Contents/poppler-data"
     PATTERN CMakeLists.txt EXCLUDE
@@ -62,6 +67,8 @@ IF ( ${CMAKE_INSTALL_PREFIX} MATCHES .*/_CPack_Packages/.* )
       EXPECTED_MD5 "${TW_MANUAL_ARCHIVE_MD5}"
       SHOW_PROGRESS
     )
+  ELSE ( )
+    MESSAGE(STATUS "Using manual files in '${PROJECT_SOURCE_DIR}/${TW_MANUAL_ARCHIVE}'")
   ENDIF ()
 
   IF ( NOT EXISTS "${PROJECT_SOURCE_DIR}/${TW_MANUAL_BASE}" )
@@ -70,8 +77,11 @@ IF ( ${CMAKE_INSTALL_PREFIX} MATCHES .*/_CPack_Packages/.* )
       COMMAND unzip "${PROJECT_SOURCE_DIR}/${TW_MANUAL_ARCHIVE}"
       WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/${TW_MANUAL_BASE}"
     )
+  ELSE ( )
+    MESSAGE(STATUS "'${PROJECT_SOURCE_DIR}/${TW_MANUAL_BASE}' already present")
   ENDIF ()
 
+  MESSAGE(STATUS "Bundling manual files")
   FILE(INSTALL "${PROJECT_SOURCE_DIR}/${TW_MANUAL_BASE}/TeXworks-manual"
     DESTINATION "${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}.app/Contents/texworks-help/"
   )
