Source get-dependencies.sh so that the mxe build can update env vars

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ matrix:
 #      env: QT=5 TARGET_OS=linux
 
 before_install:
-  - travis-ci/get-dependencies.sh
+  - . travis-ci/get-dependencies.sh
 
 before_script:
   - . travis-ci/configure.sh
