--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ matrix:
   include:
     - env: TARGET_OS=osx QT=4
       os: osx
-#    - env: TARGET_OS=osx QT=5
-#      os: osx
+    - env: TARGET_OS=osx QT=5
+      os: osx
     - env: TARGET_OS=win QT=4
       os: linux
       dist: trusty
