Call package.sh instead of sourcing it

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
   - cd "${BUILDDIR}" && make VERBOSE=1 && cd "${TRAVIS_BUILD_DIR}"
 
 after_success:
-  - . travis-ci/package.sh
+  - travis-ci/package.sh
 
 deploy:
   skip_cleanup: true
