--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ deploy:
   provider: bintray
   file: bintray.json
   user: "stloeffler"
-  on: all_branches: true
+  on:
+    all_branches: true
   dry-run: true
