Run scripts instead of sourceing them (append env vars to defs.sh)
Sourcing scripts together with `set -e` to exit on errors probably wreaks havoc...

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,16 +19,16 @@ dist: trusty
 sudo: required
 
 before_install:
-  - . travis-ci/get-dependencies.sh
+  - travis-ci/get-dependencies.sh
 
 before_script:
-  - . travis-ci/configure.sh
+  - travis-ci/configure.sh
 
 script:
   - cd "${BUILDDIR}" && make VERBOSE=1 && cd "${TRAVIS_BUILD_DIR}"
 
 after_success:
-  - . travis-ci/package.sh
+  - travis-ci/package.sh
 
 deploy:
   skip_cleanup: true
