--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: cpp
 
 matrix:
   include:
-    - env: TARGET_OS=osx QT=5
-      os: osx
-    - env: TARGET_OS=osx QT=4
-      os: osx
-    - env: TARGET_OS=win QT=4
-      os: linux
-    - env: TARGET_OS=win QT=5
-      os: linux
+#    - env: TARGET_OS=osx QT=5
+#      os: osx
+#    - env: TARGET_OS=osx QT=4
+#      os: osx
+#    - env: TARGET_OS=win QT=4
+#      os: linux
+#    - env: TARGET_OS=win QT=5
+#      os: linux
     - env: TARGET_OS=linux QT=4
       os: linux
     - env: TARGET_OS=linux QT=5
