--- a/CMake/packaging/mac/MacPackagingTasks.cmake.in
+++ b/CMake/packaging/mac/MacPackagingTasks.cmake.in
@@ -102,7 +102,11 @@ IF ( ${CMAKE_INSTALL_PREFIX} MATCHES .*/_CPack_Packages/.* )
   # all non-system libraries it depends on, copies them into the `.app` bundle
   # and then re-writes the necessary loader paths.
   SET(CMAKE_MODULE_PATH @CMAKE_MODULE_PATH@)
-  INCLUDE(DeployQt${QT_VERSION_MAJOR})
+  if (QT_VERSION_MAJOR EQUAL 4)
+    INCLUDE(DeployQt4)
+  elseif (QT_VERSION_MAJOR EQUAL 5)
+    INCLUDE(DeployQt5)
+  endif ()
 
   # Gather all TeXworks Plugin libraries.
   FILE(GLOB TeXworks_PLUGINS
