--- a/CMake/packaging/mac/MacPackagingTasks.cmake.in
+++ b/CMake/packaging/mac/MacPackagingTasks.cmake.in
@@ -9,6 +9,7 @@ SET(PROJECT_BINARY_DIR @PROJECT_BINARY_DIR@)
 SET(TeXworks_LIB_DIRS @TeXworks_LIB_DIRS@)
 SET(CMAKE_SHARED_LIBRARY_SUFFIX @CMAKE_SHARED_LIBRARY_SUFFIX@)
 SET(QT_PLUGINS @QT_PLUGINS@)
+SET(QT_VERSION_MAJOR @QT_VERSION_MAJOR@)
 
 # Poppler data files: version, matching hash, and derived variables.
 SET(POPPLER_DATA_VERSION "0.4.7")
