--- a/modules/QtPDF/CMakeLists.txt
+++ b/modules/QtPDF/CMakeLists.txt
@@ -93,12 +93,13 @@ IF (DESIRED_QT_VERSION MATCHES 5 OR (NOT DESIRED_QT_VERSION AND (QT_VERSION_MAJO
   find_package(Qt5Widgets QUIET)
   find_package(Qt5Concurrent QUIET)
   find_package(Qt5Xml QUIET)
+  find_package(Qt5LinguistTools QUIET)
 
   IF( ${CMAKE_BUILD_TYPE} STREQUAL "Debug" )
     find_package(Qt5Test QUIET)
   ENDIF()
 
-  IF(Qt5Core_FOUND AND Qt5Widgets_FOUND AND Qt5Concurrent_FOUND AND Qt5Xml_FOUND AND (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug" OR (Qt5Test_FOUND)))
+  IF(Qt5Core_FOUND AND Qt5Widgets_FOUND AND Qt5Concurrent_FOUND AND Qt5Xml_FOUND AND Qt5LinguistTools_FOUND AND (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug" OR (Qt5Test_FOUND)))
     SET(QT5_FOUND TRUE)
     # Note: Qt5 only sets Qt5Widgets_VERSION, etc., but not QT_VERSION_MAJOR,
     # etc. which is used here.
@@ -332,9 +333,8 @@ ENDIF()
 # Create translations
 INCLUDE( TranslationMacros )
 FILE(GLOB TRANSLATIONS_SOURCES trans/*.ts)
-FILE(GLOB TRANSLATIONS_QM trans/*.qm)
 LIST(SORT TRANSLATIONS_SOURCES)
-QT_ADD_QM_TRANSLATIONS(QTPDF_QM ${TRANSLATIONS_QM})
+QT_ADD_TRANSLATIONS(QTPDF_QM ${TRANSLATIONS_SOURCES})
 
 CREATE_QT_PRO_FILE("${CMAKE_CURRENT_SOURCE_DIR}/trans/QtPDF_trans.pro" "src" ${QTPDF_SRCS} ${QTPDF_HDRS} ${TRANSLATIONS_SOURCES})
 
