--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ matrix:
 #    - env: TARGET_OS=win QT=4
 #      os: linux
 #      sudo: required
-#    - env: TARGET_OS=win QT=5
-#      os: linux
-#      sudo: required
+    - env: TARGET_OS=win QT=5
+      os: linux
+      sudo: required
 #    - env: TARGET_OS=linux QT=4
 #      os: linux
 #      addons:
