--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ matrix:
   include:
     - env: TARGET_OS=osx QT=5
       os: osx
-    - env: TARGET_OS=win QT=5
-      os: linux
-      sudo: required
+#    - env: TARGET_OS=win QT=5
+#      os: linux
+#      sudo: required
 #    - env: TARGET_OS=linux QT=4
 #      os: linux
 #      addons:
