--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: cpp
 
 matrix:
   include:
-    - env: TARGET_OS=osx QT=5
-      os: osx
+#    - env: TARGET_OS=osx QT=5
+#      os: osx
 #    - env: TARGET_OS=win QT=5
 #      os: linux
 #      sudo: required
@@ -22,24 +22,24 @@ matrix:
 #            - libpoppler-private-dev
 #            - liblua5.2-dev
 #            - fakeroot
-#    - env: TARGET_OS=linux QT=5
-#      os: linux
-#      addons:
-#        apt:
-#          packages:
-#            - ubuntu-dev-tools
-#            - dput
-#            - debhelper
-#            - qtbase5-dev
-#            - qtscript5-dev
-#            - qttools5-dev
-#            - qttools5-dev-tools
-#            - zlib1g-dev
-#            - libhunspell-dev
-##            - libpoppler-qt5-dev
-#            - libpoppler-private-dev
-#            - liblua5.2-dev
-#            - fakeroot
+    - env: TARGET_OS=linux QT=5
+      os: linux
+      addons:
+        apt:
+          packages:
+            - ubuntu-dev-tools
+            - dput
+            - debhelper
+            - qtbase5-dev
+            - qtscript5-dev
+            - qttools5-dev
+            - qttools5-dev-tools
+            - zlib1g-dev
+            - libhunspell-dev
+            - libpoppler-qt5-dev
+            - libpoppler-private-dev
+            - liblua5.2-dev
+            - fakeroot
 
 before_install:
   - ${TRAVIS_BUILD_DIR}/travis-ci/get-dependencies.sh
