Install python-paramiko (required for sftp dput to launchpad)

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ matrix:
           packages:
             - ubuntu-dev-tools
             - dput
+            - python-paramiko
             - debhelper
             - qtbase5-dev
             - qtscript5-dev
