--- a/.travis.yml
+++ b/.travis.yml
@@ -9,33 +9,50 @@ matrix:
 #      env: TARGET_OS=win QT=5
 #      os: linux
 #      sudo: required
-    - name: "Ubuntu/Linux (Qt 4)"
-      env: TARGET_OS=linux QT=4
+#    - name: "Ubuntu/Linux (Qt 4)"
+#      env: TARGET_OS=linux QT=4
+#      os: linux
+#      addons:
+#        apt:
+#          packages:
+#            - ubuntu-dev-tools
+#            - dput
+#            - python-paramiko
+#            - debhelper
+#            - libqt4-dev
+#            - zlib1g-dev
+#            - libhunspell-dev
+#            - libpoppler-qt4-dev
+#            - libpoppler-private-dev
+#            - liblua5.2-dev
+#            - fakeroot
+#    - name: "Ubuntu/Linux (Qt 5)"
+#      env: TARGET_OS=linux QT=5
+#      os: linux
+#      addons:
+#        apt:
+#          packages:
+#            - ubuntu-dev-tools
+#            - dput
+#            - python-paramiko
+#            - debhelper
+#            - qtbase5-dev
+#            - qtscript5-dev
+#            - qttools5-dev
+#            - qttools5-dev-tools
+#            - zlib1g-dev
+#            - libhunspell-dev
+#            - libpoppler-qt5-dev
+#            - libpoppler-private-dev
+#            - liblua5.2-dev
+#            - fakeroot
+
+    - name: "Ubuntu/Linux (Qt 5) [coverage]"
+      env: TARGET_OS=linux QT=5 COVERAGE=ON
       os: linux
       addons:
         apt:
           packages:
-            - ubuntu-dev-tools
-            - dput
-            - python-paramiko
-            - debhelper
-            - libqt4-dev
-            - zlib1g-dev
-            - libhunspell-dev
-            - libpoppler-qt4-dev
-            - libpoppler-private-dev
-            - liblua5.2-dev
-            - fakeroot
-    - name: "Ubuntu/Linux (Qt 5)"
-      env: TARGET_OS=linux QT=5
-      os: linux
-      addons:
-        apt:
-          packages:
-            - ubuntu-dev-tools
-            - dput
-            - python-paramiko
-            - debhelper
             - qtbase5-dev
             - qtscript5-dev
             - qttools5-dev
@@ -45,7 +62,7 @@ matrix:
             - libpoppler-qt5-dev
             - libpoppler-private-dev
             - liblua5.2-dev
-            - fakeroot
+            - lcov
 
 before_install:
   - ${TRAVIS_BUILD_DIR}/travis-ci/get-dependencies.sh
