--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: cpp
 
 matrix:
   include:
-#    - name: "Mac OS X (Qt 5)"
-#      env: TARGET_OS=osx QT=5
-#      os: osx
-#    - name: "Windows (Qt 5)"
-#      env: TARGET_OS=win QT=5
-#      os: linux
-#      sudo: required
+    - name: "Mac OS X (Qt 5)"
+      env: TARGET_OS=osx QT=5
+      os: osx
+    - name: "Windows (Qt 5)"
+      env: TARGET_OS=win QT=5
+      os: linux
+      sudo: required
 #    - name: "Ubuntu/Linux (Qt 4)"
 #      env: TARGET_OS=linux QT=4
 #      os: linux
