--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: cpp
 
 matrix:
   include:
-    - name: "Mac OS X (Qt 5)"
-      env: TARGET_OS=osx QT=5
-      os: osx
+#    - name: "Mac OS X (Qt 5)"
+#      env: TARGET_OS=osx QT=5
+#      os: osx
     - name: "Windows (Qt 5)"
       env: TARGET_OS=win QT=5
       os: linux
@@ -48,23 +48,23 @@ matrix:
 #            - poppler-data
 #            - liblua5.2-dev
 #            - fakeroot
-    - name: "Ubuntu/Linux (Qt 5) [coverage]"
-      env: TARGET_OS=linux QT=5 COVERAGE=ON
-      os: linux
-      addons:
-        apt:
-          packages:
-            - qtbase5-dev
-            - qtscript5-dev
-            - qttools5-dev
-            - qttools5-dev-tools
-            - zlib1g-dev
-            - libhunspell-dev
-            - libpoppler-qt5-dev
-            - libpoppler-private-dev
-            - poppler-data
-            - liblua5.2-dev
-            - lcov
+#    - name: "Ubuntu/Linux (Qt 5) [coverage]"
+#      env: TARGET_OS=linux QT=5 COVERAGE=ON
+#      os: linux
+#      addons:
+#        apt:
+#          packages:
+#            - qtbase5-dev
+#            - qtscript5-dev
+#            - qttools5-dev
+#            - qttools5-dev-tools
+#            - zlib1g-dev
+#            - libhunspell-dev
+#            - libpoppler-qt5-dev
+#            - libpoppler-private-dev
+#            - poppler-data
+#            - liblua5.2-dev
+#            - lcov
 
 before_install:
   - ${TRAVIS_BUILD_DIR}/travis-ci/get-dependencies.sh
