--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,16 @@ matrix:
 #    - name: "Mac OS X (Qt 5)"
 #      env: TARGET_OS=osx QT=5
 #      os: osx
-    - name: "Windows (Qt 5)"
-      env: TARGET_OS=win QT=5
-      os: linux
-      sudo: required
+#    - name: "Windows (Qt 5)"
+#      env: TARGET_OS=win QT=5
+#      os: linux
+#      sudo: required
+     - name: "Windows (MSVC)
+       env: TARGET_OS=win QT=5
+       os: windows
+
+
+
 #    - name: "Ubuntu/Linux (Qt 4)"
 #      env: TARGET_OS=linux QT=4
 #      os: linux
