--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
 #      env: TARGET_OS=win QT=5
 #      os: linux
 #      sudo: required
-     - name: "Windows (MSVC)
+     - name: "Windows (MSVC)"
        env: TARGET_OS=win QT=5
        os: windows
 
