--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: cpp
 
 matrix:
   include:
-#    - name: "Mac OS X (Qt 5)"
-#      env: TARGET_OS=osx QT=5
-#      os: osx
+    - name: "Mac OS X (Qt 5)"
+      env: TARGET_OS=osx QT=5
+      os: osx
 #    - name: "Windows (Qt 5)"
 #      env: TARGET_OS=win QT=5
 #      os: linux
