--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,8 @@ matrix:
     - name: "Windows (Qt 5)"
       env: TARGET_OS=win QT=5
       os: linux
+      dist: xenial
       services: docker
-      addons:
-        apt:
-          packages:
-            - openssl
 #    - name: "Windows (MSVC)"
 #      env: TARGET_OS=win QT=5
 #      os: windows
