--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
   apt:
     packages:
     - texlive-latex-base
+    - texlive-latex-extra
     - tex4ht
 #- texlive-lang-french
 #- texlive-lang-english
