--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ addons:
     packages:
     - texlive-latex-base
     - texlive-latex-extra
+    - texlive-luatex
     - tex4ht
 #- texlive-lang-french
 #- texlive-lang-english
