--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
     - texlive-latex-extra
     - texlive-luatex
     - tex4ht
+    - lmodern
 #- texlive-lang-french
 #- texlive-lang-english
 
