Replace devscripts by ubuntu-dev-tools dput fakeroot

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ addons:
     - texlive-fonts-recommended
     - lmodern
     - texlive-lang-french
-    - devscripts
+    - ubuntu-dev-tools
+    - dput
+    - fakeroot
 
 script:
   - make dist
