--- a/src/en/html/Makefile
+++ b/src/en/html/Makefile
@@ -56,7 +56,7 @@ images/%.eps : ../images/%.pdf
 images/%.eps : ../images/%.png
 	@echo "Creating image $@ (from $<)"
 	@mkdir -p images
-	@convert "$<" "$@" $(SUPRESSOUT)
+	@convert "$<" ppm: | pnmtops -noturn | eps2eps - "$@"
 
 
 index.ind : images $(SOURCES) manual.cfg tex4ht.env
