--- a/src/fr/html/Makefile
+++ b/src/fr/html/Makefile
@@ -57,11 +57,11 @@ images/%.eps : ../images/%.pdf
 images/%.eps : ../images/%.png
 	@echo "Creating image $@ (from $<)"
 	@mkdir -p images
-	@convert "$<" "$@" $(SUPRESSOUT)
+	@convert "$<" ppm: | pnmtops -noturn | eps2eps - "$@"
 images/%.eps : ../images/%.jpg
 	@echo "Creating image $@ (from $<)"
 	@mkdir -p images
-	@convert "$<" "$@" $(SUPRESSOUT)
+	@convert "$<" ppm: | pnmtops -noturn | eps2eps - "$@"
 
 
 index.ind : images $(SOURCES) manual.cfg tex4ht.env
