--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
   - ${TRAVIS_BUILD_DIR}/travis-ci/install.sh
 
 script:
+  - export PATH="$HOME/texlive/2018/bin/x86_64-linux:$PATH"
   - env
   - make dist
 
